# CIG-Nexus

./: .clang-format  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci-server.yml  server-ci.yml  web-ci.yml
backup/app/: page.tsx
desktop/: README.md
docs/: architecture.md  gateway-api.md  rooms-spec.md
gateway/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
gateway/src/: index.ts
gateway/src/protocol/: frame.ts
gateway/src/tcp/: TcpClient.ts
gateway/src/ws/: WsServer.ts
server/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
server/include/: Connection.hpp  FrameDecoder.hpp  Server.hpp  TcpListener.hpp
server/include/guild/: Channel.hpp  Guild.hpp  GuildManager.hpp
server/include/protocol/: Message.hpp  MessageBuilders.hpp  MessageDispatcher.hpp  MessageParser.hpp
server/include/protocol/handlers/: ChannelHandler.hpp  ChatHandler.hpp  GuildHandler.hpp  HelloHandler.hpp  IdentifyHandler.hpp
server/include/session/: Session.hpp  SessionManager.hpp
server/src/: Connection.cpp  Server.cpp  TcpListener.cpp  main.cpp
server/src/guild/: GuildManager.cpp
server/src/protocol/: MessageDispatcher.cpp  MessageParser.cpp
server/src/protocol/handlers/: ChannelHandler.cpp  ChatHandler.cpp  GuildHandler.cpp  HelloHandler.cpp  IdentifyHandler.cpp
server/src/session/: SessionManager.cpp
server/tests/: CMakeLists.txt  Connection.test.cpp  Server.test.cpp
server/tests/guild/: GuildManager.test.cpp
server/tests/integration/: Server.test.cpp
server/tests/protocol/: ChannelHandler.test.cpp  ChatHandler.test.cpp  FrameDecoder.test.cpp  GuildHandler.test.cpp  HelloHandler.test.cpp  IdentifyHandler.test.cpp  MessageDispatcher.test.cpp  MessageParser.test.cpp  SessionManager.test.cpp
shared/protocol/: README.md
web/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
web/app/: page.tsx
web/lib/: gateway.ts
